# yet-another-raytracer

./: Cargo.toml  LICENSE  README.md  after_antialiasing.ppm  bouncing_spheres.ppm  checkered_spheres.ppm  earth-mapped_sphere.ppm  perlin_texture_marbled_texture.ppm  perlin_texture_shifted_off_intefer_values.ppm  perlin_texture_with_trilinear_interpolation.ppm  rendering_of_diffuse_spheres_with_hemispherical_scattering.ppm  spheres_on_checkered_ground.ppm  zooming_in.ppm
.github/workflows/: render-david.yml
output/: a_distant_view.ppm  a_hollow_glass_sphere.ppm  fuzzed_metal.ppm  glass_sphere_that_sometimes_refracts.ppm  hashed_random_texture.ppm  perlin_texture_higher_frequency.ppm  perlin_texture_with_trilinear_interpolation_smoothed.ppm  perlin_texture_with_turbulence.ppm  resulting_render_of_noramls_colored_sphee_with_ground.ppm  shiny_metal.ppm  spheres_with_depth_of_field.ppm
raytracer/: Cargo.toml
raytracer/src/: aabb.rs  aarect.rs  box_entity.rs  bvh.rs  camera.rs  color.rs  film.rs  hittable.rs  integrator.rs  main.rs  material.rs  onb.rs  pdf.rs  qbvh.rs  ray.rs  sampler.rs  scene.rs  scenes.rs  sphere.rs  texture.rs  triangle.rs  vec3.rs
raytracer_codegen/: Cargo.toml
raytracer_codegen/src/: lib.rs
src/: aabb.rs  aarect.rs  box_entity.rs  bvh.rs  camera.rs  hittable.rs  main.rs  material.rs  objs.rs  ray.rs  sphere.rs  texture.rs  vec3.rs
src/data/: ray.rs  vec3.rs
src/objs/: camera.rs  hittable.rs  sphere.rs
