[package]
name = "raytracer"
version = "0.1.0"
authors = ["XuZiWei <xuziwei100@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
tobj = "4.0.2"
rand = "0.8.5"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
threadpool = "1.8.1"
indicatif = "0.18.4"
raytracer_codegen = { path = "../raytracer_codegen" }
